<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ukraine_logo"
        android:padding="@dimen/margin_16dp"
        tools:context=".presentation.screen.WeatherActivity">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="80dp"
            android:layout_height="80dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/first_sity_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_40dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/first_city_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/first_sity_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_20sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/text_first_city_temperature"
                    app:layout_constraintEnd_toStartOf="@+id/first_sity_weather_logo"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/text_first_city_temperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/temperature"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_20sp"
                    app:layout_constraintEnd_toEndOf="@+id/text_second_city_temperature"
                    app:layout_constraintStart_toEndOf="@+id/first_city_name"
                    app:layout_constraintTop_toTopOf="@+id/first_sity_weather_logo" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/second_sity_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_40dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_sity_container">

                <TextView
                    android:id="@+id/second_city_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/second_sity_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_20sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/text_second_city_temperature"
                    app:layout_constraintEnd_toStartOf="@+id/second_sity_weather_logo"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/text_second_city_temperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/temperature"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_20sp"
                    app:layout_constraintEnd_toEndOf="@+id/user_sity_temperature"
                    app:layout_constraintStart_toEndOf="@+id/second_city_name"
                    app:layout_constraintTop_toTopOf="@+id/second_sity_weather_logo" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_sity_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_40dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/second_sity_container">

                <TextView
                    android:id="@+id/text_user_city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/user_sity_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_20sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/user_sity_temperature"
                    app:layout_constraintEnd_toStartOf="@+id/image_weather"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Переяслав-Хмельницький" />

                <TextView
                    android:id="@+id/text_user_city_temperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/temperature"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_20sp"
                    app:layout_constraintEnd_toEndOf="@+id/image_weather"
                    app:layout_constraintStart_toStartOf="@+id/set_user_sity_button"
                    app:layout_constraintTop_toTopOf="@+id/image_weather" />

            </LinearLayout>

            <EditText
                android:id="@+id/edit_user_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_160dp"
                android:autofillHints=""
                android:hint="@string/enter_your_sity_name"
                android:inputType="text"
                android:textSize="@dimen/font_size_22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_sity_container"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_update_user_city"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="24dp"
                android:text="@string/add_your_sity_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_user_city" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


